--- a/src/Tdip.SharpWatcher.Tests/Tdip.SharpWatcher.Tests.fsproj
+++ b/src/Tdip.SharpWatcher.Tests/Tdip.SharpWatcher.Tests.fsproj
@@ -19,4 +19,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tdip.SharpWatcher\Tdip.SharpWatcher.fsproj" />
+  </ItemGroup>
+
 </Project>
