--- a/src/Tdip.SharpWatcher/Tdip.SharpWatcher.fsproj
+++ b/src/Tdip.SharpWatcher/Tdip.SharpWatcher.fsproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="src/Utils.fs" />
     <Compile Include="src/SharpWatcher.fs" />
     <Compile Include="src/SharpWatcherEvaluator.fs" />
+    <Compile Include="src/SharpWatcherMatcher.fs" />
   </ItemGroup>
 
 </Project>
