--- a/src/Tdip.SharpWatcher.Tests/Tdip.SharpWatcher.Tests.fsproj
+++ b/src/Tdip.SharpWatcher.Tests/Tdip.SharpWatcher.Tests.fsproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="tests/Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -17,6 +17,10 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tdip.SharpWatcher\Tdip.SharpWatcher.fsproj" />
   </ItemGroup>
 
 </Project>
