--- a/src/Tdip.SharpWatcher/Tdip.SharpWatcher.fsproj
+++ b/src/Tdip.SharpWatcher/Tdip.SharpWatcher.fsproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <Compile Include="src/Utils.fs" />
-    <Compile Include="src/FileSystem.fs" />
+    <Compile Include="src/WatchEvents.fs" />
     <Compile Include="src/SharpWatcher.fs" />
   </ItemGroup>
 
