--- a/src/Tdip.SharpWatcher.Tests/Tdip.SharpWatcher.Tests.fsproj
+++ b/src/Tdip.SharpWatcher.Tests/Tdip.SharpWatcher.Tests.fsproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="tests/Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -17,6 +17,10 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tdip.SharpWatcher\Tdip.SharpWatcher.fsproj" />
   </ItemGroup>
 
 </Project>
